# TecXSanskritModel

./: Dockerfile  README.md  compose.yml  docker.sh  migrate_lexicon.py  process_all.sh  publish_to_Python_Package_Index.sh  pyproject.toml  rollback_model.sh  setup.py
.github/workflows/: finetune.yml  publish.yml  rollback.yml
sanskrit_cleaner/: __init__.py  dashboard.py  master_cleaner.py
sanskrit_model/: tecxsanmodel.py  tecxsanskritmodel.py
