[build-system]
requires = ["setuptools>=61.0"]
build_backend = "setuptools.build_meta"

[project]
name = "sanskrit-cleaner"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A Sandhi-aware Sanskrit pre-processor for LLMs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psycopg2-binary",
    "pandas",
]

